# storage/api-docs/api-docs.json
@@ -643,220 +643,6 @@
                 }
             }
         },
-        "/api/sanctum/getTasksList": {
-            "get": {
-                "tags": [
-                    "Задачи"
-                ],
-                "summary": "Получение списка задач",
-                "description": "Возвращает список всех задач.",
-                "operationId": "08d2dac2e6ab0536471f3f87a89b79d3",
-                "responses": {
-                    "200": {
-                        "description": "Список задач",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/RegisterRequest"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Не авторизован. Токен доступа отсутствует или недействителен."
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/sanctum/updateTaskById/{id}": {
-            "put": {
-                "tags": [
-                    "Задачи"
-                ],
-                "summary": "Update task by ID",
-                "description": "Меняет задачу по ее Id",
-                "operationId": "090855ec2fbdc9a9d17bb925b0805ab9",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Task ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "application_id": {
-                                        "description": "Task application_id",
-                                        "type": "string",
-                                        "example": "1"
-                                    },
-                                    "master_id": {
-                                        "description": "Task master_id",
-                                        "type": "string",
-                                        "example": "1"
-                                    },
-                                    "status": {
-                                        "description": "Task status",
-                                        "type": "string",
-                                        "example": "Принято"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Task updated successfully"
-                    },
-                    "404": {
-                        "description": "Task not found"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/sanctum/getTaskById/{id}": {
-            "get": {
-                "tags": [
-                    "Задачи"
-                ],
-                "summary": "Get task by ID",
-                "description": "Получает задачу по ID",
-                "operationId": "25ff68cdceb88ca570327bd7be0a26e3",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Task ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Task founded successfully"
-                    },
-                    "404": {
-                        "description": "Task not found"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/sanctum/deleteTaskById/{id}": {
-            "delete": {
-                "tags": [
-                    "Задачи"
-                ],
-                "summary": "Delete task by ID",
-                "description": "Удаляет задачу по ID",
-                "operationId": "ae7606b8a2a03f6a2c2a42bc459bda5a",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Task ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Task deleted successfully"
-                    },
-                    "404": {
-                        "description": "Task not found"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
-        "/api/sanctum/createTask/{application_id}/{master_id}/{status}": {
-            "get": {
-                "tags": [
-                    "Задачи"
-                ],
-                "summary": "Create task",
-                "description": "Меняет задачу по ее Id",
-                "operationId": "0c7eb0832a7a84c29e37ad67dd52fe0a",
-                "parameters": [
-                    {
-                        "name": "application_id",
-                        "in": "path",
-                        "description": "application_id",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "master_id",
-                        "in": "path",
-                        "description": "master_id",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "status",
-                        "in": "path",
-                        "description": "status",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Task created successfully"
-                    },
-                    "404": {
-                        "description": "Task not created"
-                    }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
-            }
-        },
         "/api/sanctum/getUsersList": {
             "get": {
                 "tags": [
